@@ -1,3 +1,9 @@
+Sun Jul 31 21:09:04 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
+
+	* common.mk (node_name.inc): Use $(Q) for consistency.
+
+	* Makefile.in (INSNS): ditto.
+
 Sun Jul 31 21:19:51 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
 
 	* lib/mkmf.rb (configuration:ECHO1): Same as the recent fix in
